2005-09-20  Frederic Ruaudel <grumz@grumz.net> 0.8

	* configure.in: Add prerequisite for GConf

2005-09-19  Frederic Ruaudel <grumz@grumz.net> 0.8

	* nact/Makefile.am: Remove the suppression of nact.desktop.in as
it is no more autogenerated.
	
	* po/README_TRANSLATORS: Add some information for translators

	* po/*.po:
	* po/nautilus-actions.pot: Update translations strings

	* configure.in:
	* config/Makefile.am:
	* po/POTFILES.in:
	* config/config_newaction.schemas.in.in: Add the GConf schemas for
the new action config and configure it with i18n support.

2005-09-17  Frederic Ruaudel <grumz@grumz.net> 0.8

	* plugin/nautilus-actions.c: 
	* plugin/nautilus-actions.h: Start migration of extensions data
into the NautilusActions GObject.

	* nact/nautilus-actions-config.glade: 
	* nact/nautilus-actions-config.in: Fix alignment problem in NACT
interface (Bug #105).

	* po/*.po:
	* po/nautilus-actions.pot: Update translations strings

	* po/POTFILES.in: Rename nact/nact.desktop.in.in into
nact/nact.desktop.in because there is no need anymore for autotool var
expansion

	* configure.in: Remove the generation of nact/nact.desktop.in
because there is no need anymore for autotool var expansion

	* nact/nact.desktop.in.in:
	* nact/nact.desktop.in: Rename nact/nact.desktop.in.in into 
nact/nact.desktop.in because there is no need anymore for autotool var
expansion

	* nact/nautilus-actions-icon.png: 
	* nact/nautilus-actions-icon.xcf: Create a new nautilus actions icon

	* nact/nautilus-launch-icon.png: Remove the old nautilus actions icon

	* nact/Makefile.am: 
	* nact/nact.desktop.in.in: 
	* nact/nautilus-actions-config.glade: Replace the old icon by the new one

	* nact/nautilus-actions-config.glade: Update informations of the about
dialog (license and project URL)


2005-09-17  Rodrigo Moya <rodrigo@novell.com> 0.8

	* configure.in: define DEFAULT_CONFIG_PATH.

	* plugin/nautilus-actions-config.h: removed #define for DEFAULT_CONFIG_PATH.
